--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
+    "jose": "^5.2.2",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
@@ -29,6 +31,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
