--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "cookies-next": "^4.1.1",
+    "date-fns": "^3.4.0",
     "jose": "^5.2.2",
     "json-server": "^1.0.0-alpha.23",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
