--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "-": "^0.0.1",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -31,6 +32,7 @@
     "cmdk": "^1.0.0",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.4.0",
+    "framer-motion": "^11.0.14",
     "jose": "^5.2.2",
     "json-server": "^1.0.0-alpha.23",
     "lucide-react": "^0.343.0",
