--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@tanstack/react-table": "^8.13.2",
     "@tremor/react": "^3.14.1",
     "axios": "^1.6.7",
-    "chart.js": "2.9.3",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -41,12 +41,14 @@
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.3",
     "save": "^2.9.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
